--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #bebebe;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -96,6 +96,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #bebebe;
   }
 }
